# tacacs-web

./: .gitignore  CONTEXT.md  LICENSE  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260512_1700_initial_schema.py  20260513_1000_domain_tables.py  20260513_1500_admin_session_audit.py  20260520_1700_accounting_record.py  20260609_1500_user_sam_lower_index.py
backend/app/: __init__.py  cli.py  main.py
backend/app/accounting/: __init__.py  ingestor.py
backend/app/api/: auth_local.py  health.py  internal_mavis.py  saml_routes.py
backend/app/audit/: __init__.py  actions.py  logger.py
backend/app/auth/: __init__.py  ldap_bind.py  ldap_config.py  mavis_authn.py  password.py  sessions.py
backend/app/authz/: __init__.py  device_resolution.py  policy.py  profile_render.py
backend/app/core/: config.py  crypto.py  logging.py
backend/app/db/: base.py  session.py  types.py
backend/tests/: conftest.py  test_accounting_ingestor.py  test_api_v1_accounting.py  test_api_v1_audit_log.py  test_api_v1_crud.py  test_api_v1_settings.py  test_api_v1_settings_saml.py  test_api_v1_settings_tls.py  test_auth_local.py  test_authz.py  test_config.py  test_crypto.py  test_device_templates.py  test_health.py  test_internal_mavis.py  test_ldap3_paged_search.py  test_ldap_bind.py  test_ldap_sync.py  test_mavis_authn.py  test_mavis_child.py  test_models.py  test_nas_config_render.py  test_nas_config_writer.py  test_saml_group_resolution.py  test_saml_keypair.py  test_setup_wizard.py  test_syslog_forwarder.py
docs/: DEPLOY.md
(+118 files in other folders)
