[project]
name = "tacacs-web-backend"
version = "0.1.0"
description = "Backend service for tacacs-web — FastAPI app, AD sync, SAML SP, MAVIS handler, accounting ingestor."
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "tacacs-web contributors" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "cryptography>=43",
    "ldap3>=2.9",
    "argon2-cffi>=23.1",
    "python3-saml>=1.16",
    "defusedxml>=0.7",
    "python-multipart>=0.0.9",
]

[project.scripts]
tacacs-web = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
